--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm pack --dry-run
 
       - name: publish
-        run: npm publish
+        run: npm publish --registry=https://npm.pkg.github.com
 
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
