--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
           echo '//npm.pkg.github.com/:_authToken=${{secrets.NPM_TOKEN}}' >> .npmrc
 
       - name: publish
-        run: npm publish
+        run: npm publish --registry=https://npm.pkg.github.com
 
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
