--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "vite-plugin-lib-inject-css": "^2.0.1"
   },
   "dependencies": {
-    "@storybook/test": "^8.0.4"
+    "@storybook/test": "^8.0.4",
+    "dangerously-set-html-content": "^1.1.0"
   }
 }
